# mycelium-std-conformance — standalone workspace (extracted from tzervas/mycelium; see CROSS-REF.md).
# Container layout: the crate lives at crates/mycelium-std-conformance so its CARGO_MANIFEST_DIR/../../lib
# fixture paths (self-hosted compiler + std .myc differentials) resolve to this repo's lib/,
# byte-identical to the monorepo layout — zero source divergence.
[workspace]
resolver = "2"
members = [
    "crates/mycelium-std-conformance",
]

[workspace.package]
version = "0.464.0"
edition = "2021"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/tzervas/mycelium-std-conformance"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"

[workspace.lints.rust]
# ADR-014: unsafe permitted-but-documented; the check is clippy::undocumented_unsafe_blocks.
unsafe_code = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"

# G2 never-silent arithmetic: release builds panic on overflow (monorepo parity).
[profile.release]
overflow-checks = true
