[package]
name = "mycelium-std-conformance"
version.workspace = true
description = "Standard-library port-conformance test harness (M-971; RFC-0031 D5/D6): the three-way differential (L1-eval ≡ elaborate→L0-interp ≡ AOT) between each `lib/std/<name>.myc` nodule port and its retained Rust `mycelium-std-<name>` oracle. Relocated out of `mycelium-l1` (M-971) so the trusted `core`-tier L1 crate no longer dev-depends on the `std`-tier oracle crates — the tests legitimately live in this higher-tier crate that may depend on both. Test-only: the crate has no library surface."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

# Test-only crate: the port-differential integration tests in `tests/` drive the L1 frontend, the
# reference interpreter, the AOT env-machine, and the shared M-210 checker against each ported
# `.myc` nodule, and compare against the retained Rust std oracle (RFC-0031 D6 — the oracle crates
# are NOT retired). All dependencies are dev-dependencies (the crate exports no library items), so
# this crate has zero in-workspace NORMAL deps (stratum 0) and no crate depends on it (a sink) —
# it participates in no dependency cycle. It sits at the `std` tier because it depends on the
# `std`-tier oracle crates; its downward deps on the `core`-tier L1 stack (l1/interp/cert/mlir) are
# tier-legal (std -> core). See xtask/deps-strata.toml + DN-68.
[dev-dependencies]
# The L1 frontend + trusted execution stack the shared harness drives (three-way differential).
mycelium-core = { git = "https://github.com/tzervas/mycelium-core", rev = "781d3fcceba82acfe6b0eb46650513bd78a2416b" }
mycelium-l1 = { git = "https://github.com/tzervas/mycelium-l1", rev = "cd32a1ed7ab7d2be38c9c3047da7318d182b7a1c" }
mycelium-interp = { git = "https://github.com/tzervas/mycelium-runtime", rev = "ab9cee665b620ed80ab74ea61ea639817dc49077" }
mycelium-cert = { git = "https://github.com/tzervas/mycelium-runtime", rev = "ab9cee665b620ed80ab74ea61ea639817dc49077" }
mycelium-mlir = { git = "https://github.com/tzervas/mycelium-codegen", rev = "f144d635e970257aee5b618f8cdfaa736e2c391d" }
# The retained Rust oracles (RFC-0031 D6, test scope only; crates not retired). Each `std_<name>.rs`
# differential compares its `.myc` port against the ACTUAL public surface of the matching oracle.
mycelium-std-content = { git = "https://github.com/tzervas/mycelium-std-content", rev = "792eb7fe476ebf50bae1d8a20e3a7fba83a16d8b" }
mycelium-std-core = { git = "https://github.com/tzervas/mycelium-std-core", rev = "580b64316774e22f0b7d5d495ca1d9b9d6536a60" }
mycelium-std-diag = { git = "https://github.com/tzervas/mycelium-std-diag", rev = "b964be31c657a81e6b2197c8ba7ede1f01ac2cd3" }
mycelium-std-error = { git = "https://github.com/tzervas/mycelium-std-error", rev = "42ae6b191bf92601aa8a5cceba26a2035d6f5542" }
mycelium-std-numerics = { git = "https://github.com/tzervas/mycelium-std-numerics", rev = "cdfb2cdef08818091d47ec99f592947c1ccc4085" }
mycelium-std-recover = { git = "https://github.com/tzervas/mycelium-std-recover", rev = "cc89777915a31e9ce9e8676a978a185eed467590" }
mycelium-std-select = { git = "https://github.com/tzervas/mycelium-std-select", rev = "a082e7ff280c8ed1fcfc3e0d57e7020d39a17257" }
mycelium-std-spore = { git = "https://github.com/tzervas/mycelium-std-spore", rev = "153581f234ddf2643ab2fb4e329086b4e128fc44" }
mycelium-std-swap = { git = "https://github.com/tzervas/mycelium-std-swap", rev = "af04ae6ce366b883c8c56d266d19342f447c3ac3" }
mycelium-std-ternary = { git = "https://github.com/tzervas/mycelium-std-ternary", rev = "523ce084d85e2f84aef3b645c36bde4df9ec613c" }
mycelium-std-testing = { git = "https://github.com/tzervas/mycelium-std-testing", rev = "b67755101f65071b81ad965896406107a88e370c" }
mycelium-std-time = { git = "https://github.com/tzervas/mycelium-std-time", rev = "fedd18411bf33cc2cd2b0d7ba41e1259719d23c0" }
