[package]
name = "mycelium-std-conformance"
version.workspace = true
description = "Standard-library port-conformance test harness (M-971; RFC-0031 D5/D6): the three-way differential (L1-eval ≡ elaborate→L0-interp ≡ AOT) between each `lib/std/<name>.myc` nodule port and its retained Rust `mycelium-std-<name>` oracle. Relocated out of `mycelium-l1` (M-971) so the trusted `core`-tier L1 crate no longer dev-depends on the `std`-tier oracle crates — the tests legitimately live in this higher-tier crate that may depend on both. Test-only: the crate has no library surface."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

# Test-only crate: the port-differential integration tests in `tests/` drive the L1 frontend, the
# reference interpreter, the AOT env-machine, and the shared M-210 checker against each ported
# `.myc` nodule, and compare against the retained Rust std oracle (RFC-0031 D6 — the oracle crates
# are NOT retired). All dependencies are dev-dependencies (the crate exports no library items), so
# this crate has zero in-workspace NORMAL deps (stratum 0) and no crate depends on it (a sink) —
# it participates in no dependency cycle. It sits at the `std` tier because it depends on the
# `std`-tier oracle crates; its downward deps on the `core`-tier L1 stack (l1/interp/cert/mlir) are
# tier-legal (std -> core). See xtask/deps-strata.toml + DN-68.
[dev-dependencies]
# The L1 frontend + trusted execution stack the shared harness drives (three-way differential).
mycelium-core = { git = "https://github.com/tzervas/mycelium-core", rev = "46d2515cbd86d2ae4d1365f4adcd2796737e9f0b" }
mycelium-l1 = { git = "https://github.com/tzervas/mycelium-l1", rev = "2b92f54349eb0d4f67e32e983874df76908b9ab6" }
mycelium-interp = { git = "https://github.com/tzervas/mycelium-runtime", rev = "487b1e7049ff521b1a6fa33f376245089e7dc1e1" }
mycelium-cert = { git = "https://github.com/tzervas/mycelium-runtime", rev = "487b1e7049ff521b1a6fa33f376245089e7dc1e1" }
mycelium-mlir = { git = "https://github.com/tzervas/mycelium-codegen", rev = "505448cbfb5553a34aca726f0d1b884981a83631" }
# The retained Rust oracles (RFC-0031 D6, test scope only; crates not retired). Each `std_<name>.rs`
# differential compares its `.myc` port against the ACTUAL public surface of the matching oracle.
mycelium-std-content = { git = "https://github.com/tzervas/mycelium-std-content", rev = "a6059bae85256fed1272f38a8cbbd2dec2e8c56c" }
mycelium-std-core = { git = "https://github.com/tzervas/mycelium-std-core", rev = "376762cc17853e1582684ececf9e760426bcfb0c" }
mycelium-std-diag = { git = "https://github.com/tzervas/mycelium-std-diag", rev = "0ce2e431a4786ec5f974fc66e774cb0a9b77def4" }
mycelium-std-error = { git = "https://github.com/tzervas/mycelium-std-error", rev = "dece7d3b1ce12df65cfba0131d151689f1e42a5e" }
mycelium-std-numerics = { git = "https://github.com/tzervas/mycelium-std-numerics", rev = "2676276b1559f0c1c0b1c0c39ad48ba6ff89d639" }
mycelium-std-recover = { git = "https://github.com/tzervas/mycelium-std-recover", rev = "ad8787428c0d8c1eb2bf3a8cd6504cc39bca00bf" }
mycelium-std-select = { git = "https://github.com/tzervas/mycelium-std-select", rev = "a800a36061be6177ed4885707bf5d0f5e125ed73" }
mycelium-std-spore = { git = "https://github.com/tzervas/mycelium-std-spore", rev = "29cbddd0a1480c6b784805bb8d7e5141497d7dc0" }
mycelium-std-swap = { git = "https://github.com/tzervas/mycelium-std-swap", rev = "55bb071af6b428c933c17c7cd8045f8c8663e5ea" }
mycelium-std-ternary = { git = "https://github.com/tzervas/mycelium-std-ternary", rev = "bcc63ee0fcd9e07ae1d9cc85241e251767a6d8bf" }
mycelium-std-testing = { git = "https://github.com/tzervas/mycelium-std-testing", rev = "6f3a51aa61a60b508fa6a8a15cb7b12e4b736413" }
mycelium-std-time = { git = "https://github.com/tzervas/mycelium-std-time", rev = "47ef9e7ec4143c97878083ca5c15930a21eeed83" }
